# UniPay

./: .dockerignore  .env.example  .gitignore  Agent.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/alipay/: Cargo.toml
crates/alipay/src/: adapter.rs  config.rs  lib.rs  mapping.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  models.rs  service.rs  traits.rs
crates/http-client/: Cargo.toml
crates/http-client/src/: lib.rs
crates/signing/: Cargo.toml
crates/signing/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/wechat/: Cargo.toml
crates/wechat/src/: adapter.rs  config.rs  error.rs  http.rs  lib.rs  mapping.rs  models.rs  signing.rs
docs/: API_CONTRACT.md  ARCHITECTURE.md  BUILD.md  CLIENT_INTEGRATION.md  DATA_MODEL.md  DEPLOYMENT.md  ERROR_CODES.md  INTEGRATION_DOCS.md  OPERATIONS.md  PROVIDER_ADAPTER_GUIDE.md  PROVIDER_MAPPING.md  README.md  SECURITY.md  SPEC.md  WEBHOOK_RELIABILITY.md  nextsession.md  openapi.yaml
examples/http/: README.md  alipay_payment_webhook_invalid_signature.form  alipay_refund_webhook_invalid_signature.form  unipay_mvp.http
examples/http/json/: create_alipay_refund.json  create_alipay_web_payment.json  create_wechat_native_payment.json  create_wechat_refund.json  invalid_float_amount_payment.json  invalid_zero_amount_payment.json  wechat_payment_webhook_invalid_signature.json  wechat_refund_webhook_invalid_signature.json
gateway/: Cargo.toml
gateway/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  services.rs
gateway/src/api/: mod.rs  models.rs  response.rs  routes.rs  trace.rs
gateway/tests/: api_contract.rs
tests/: INTEGRATION_TEST_PLAN.md
tests/contract-tests/: Cargo.toml  README.md
tests/contract-tests/src/: lib.rs
tests/contract-tests/tests/: gateway_contract_static.rs
