[workspace]
members = [
    "crates/common",
    "crates/core",
    "crates/storage",
    "crates/signing",
    "crates/http-client",
    "crates/wechat",
    "crates/alipay",
    "gateway",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://example.com/UniPay"
rust-version = "1.78"

[workspace.dependencies]
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
http = "1"
parking_lot = "0.12"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
openssl = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
