[package]
name = "unipay-gateway"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "unipay_gateway"
path = "src/lib.rs"

[[bin]]
name = "unipay-gateway"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
axum = "0.8"
bytes = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
hex = "0.4"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
