[package]
name = "unipay-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
parking_lot.workspace = true
unipay-core = { path = "../core" }

[dev-dependencies]
chrono.workspace = true
tokio.workspace = true
unipay-common = { path = "../common" }
